--- a/MySecurity2/src/main/resources/templates/ussr.html
+++ b/MySecurity2/src/main/resources/templates/ussr.html
@@ -23,7 +23,8 @@
 				</div>
 		        <div>
 				    <span>外観:</span>
-				    <img th:src="'data:image/png;base64,' + ${storeRow.Simg}">
+		<img class="product-image" th:src="'data:image/png;base64,' + ${storeRow.Simg}">
+
 				</div>
 				<div>
 				    <span>営業時間:</span>
