--- a/MySecurity2/src/main/resources/templates/usd.html
+++ b/MySecurity2/src/main/resources/templates/usd.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/usd.css}">
-
+    <script src="/js/Vitem.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
 
     <title>店舗詳細</title>
 </head>
@@ -23,7 +26,9 @@
                        
                            <div class="image-column">
                                 <span>外観:</span>
+                                <a th:href="'data:image/png;base64,' + ${storeRow.Simg}" data-lightbox="group">
                                 <img th:src="'data:image/png;base64,' + ${storeRow.Simg}" alt="外観画像">
+                                </a>
                             </div>
                        
                        
